samples/_failures_safe/1761155369_805fec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06bced85.c: In function ‘main’:
./samples/SAFE/__tmp_06bced85.c:163:22: error: expected ‘)’ at end of input
  163 |         if (!add_edge
      |            ~         ^
      |                      )
./samples/SAFE/__tmp_06bced85.c:163:9: error: expected declaration or statement at end of input
  163 |         if (!add_edge
      |         ^~
./samples/SAFE/__tmp_06bced85.c:163:9: error: expected declaration or statement at end of input
